Corrected the alignment issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -261,7 +261,7 @@ html{
     & h1{
             position: absolute;
             top: 0;
-            left: -5px;
+            left: 24px;
             line-height: 100%;
         }
     & section{
